Updates to CheckGraph.